chores: removed overflow containers

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -130,7 +130,6 @@ services:
       - ./common/:/usr/src/app/openapi_server/helpers/
     depends_on:
       - service_auth_db_proxy
-      - logging_loki
     tty: true
     restart: always
     networks:
@@ -159,17 +158,17 @@ services:
     - public_gachaandgames_network
     restart: always
   
-  service_auth_db_replica:
-    build: ./databases/auth/replica/
-    container_name: unipi-gatchaandgames-service_auth_db_replica
-    env_file: ./databases/auth/replica/replica.env
-    volumes:
-    - ./databases/auth/replica/init.sql:/docker-entrypoint-initdb.d/init.sql:ro
-    - ./databases/auth/replica/ssl:/etc/mysql/ssl:ro
-    - service_auth_db_replica_data:/var/lib/mysql
-    networks:
-    - public_gachaandgames_network
-    restart: always
+  # service_auth_db_replica:
+  #   build: ./databases/auth/replica/
+  #   container_name: unipi-gatchaandgames-service_auth_db_replica
+  #   env_file: ./databases/auth/replica/replica.env
+  #   volumes:
+  #   - ./databases/auth/replica/init.sql:/docker-entrypoint-initdb.d/init.sql:ro
+  #   - ./databases/auth/replica/ssl:/etc/mysql/ssl:ro
+  #   - service_auth_db_replica_data:/var/lib/mysql
+  #   networks:
+  #   - public_gachaandgames_network
+  #   restart: always
   
   service_auth_db_proxy:
     image: proxysql/proxysql:2.7.1
@@ -218,17 +217,17 @@ services:
     - public_gachaandgames_network
     restart: always
   
-  service_auction_db_replica:
-    build: ./databases/auction/replica/
-    container_name: unipi-gatchaandgames-service_auction_db_replica
-    env_file: ./databases/auction/replica/replica.env
-    volumes:
-    - ./databases/auction/replica/init.sql:/docker-entrypoint-initdb.d/init.sql:ro
-    - ./databases/auction/replica/ssl:/etc/mysql/ssl:ro
-    - service_auction_db_replica_data:/var/lib/mysql
-    networks:
-    - public_gachaandgames_network
-    restart: always
+  # service_auction_db_replica:
+  #   build: ./databases/auction/replica/
+  #   container_name: unipi-gatchaandgames-service_auction_db_replica
+  #   env_file: ./databases/auction/replica/replica.env
+  #   volumes:
+  #   - ./databases/auction/replica/init.sql:/docker-entrypoint-initdb.d/init.sql:ro
+  #   - ./databases/auction/replica/ssl:/etc/mysql/ssl:ro
+  #   - service_auction_db_replica_data:/var/lib/mysql
+  #   networks:
+  #   - public_gachaandgames_network
+  #   restart: always
   
   service_auction_db_proxy:
     image: proxysql/proxysql:2.7.1
@@ -277,17 +276,17 @@ services:
     - public_gachaandgames_network
     restart: always
   
-  service_currency_db_replica:
-    build: ./databases/currency/replica/
-    container_name: unipi-gatchaandgames-service_currency_db_replica
-    env_file: ./databases/currency/replica/replica.env
-    volumes:
-    - ./databases/currency/replica/init.sql:/docker-entrypoint-initdb.d/init.sql:ro
-    - ./databases/currency/replica/ssl:/etc/mysql/ssl:ro
-    - service_currency_db_replica_data:/var/lib/mysql
-    networks:
-    - public_gachaandgames_network
-    restart: always
+  # service_currency_db_replica:
+  #   build: ./databases/currency/replica/
+  #   container_name: unipi-gatchaandgames-service_currency_db_replica
+  #   env_file: ./databases/currency/replica/replica.env
+  #   volumes:
+  #   - ./databases/currency/replica/init.sql:/docker-entrypoint-initdb.d/init.sql:ro
+  #   - ./databases/currency/replica/ssl:/etc/mysql/ssl:ro
+  #   - service_currency_db_replica_data:/var/lib/mysql
+  #   networks:
+  #   - public_gachaandgames_network
+  #   restart: always
   
   service_currency_db_proxy:
     image: proxysql/proxysql:2.7.1
@@ -336,17 +335,17 @@ services:
     - public_gachaandgames_network
     restart: always
   
-  service_feedback_db_replica:
-    build: ./databases/feedback/replica/
-    container_name: unipi-gatchaandgames-service_feedback_db_replica
-    env_file: ./databases/feedback/replica/replica.env
-    volumes:
-    - ./databases/feedback/replica/init.sql:/docker-entrypoint-initdb.d/init.sql:ro
-    - ./databases/feedback/replica/ssl:/etc/mysql/ssl:ro
-    - service_feedback_db_replica_data:/var/lib/mysql
-    networks:
-    - public_gachaandgames_network
-    restart: always
+  # service_feedback_db_replica:
+  #   build: ./databases/feedback/replica/
+  #   container_name: unipi-gatchaandgames-service_feedback_db_replica
+  #   env_file: ./databases/feedback/replica/replica.env
+  #   volumes:
+  #   - ./databases/feedback/replica/init.sql:/docker-entrypoint-initdb.d/init.sql:ro
+  #   - ./databases/feedback/replica/ssl:/etc/mysql/ssl:ro
+  #   - service_feedback_db_replica_data:/var/lib/mysql
+  #   networks:
+  #   - public_gachaandgames_network
+  #   restart: always
   
   service_feedback_db_proxy:
     image: proxysql/proxysql:2.7.1
@@ -395,17 +394,17 @@ services:
     - public_gachaandgames_network
     restart: always
   
-  service_gacha_db_replica:
-    build: ./databases/gacha/replica/
-    container_name: unipi-gatchaandgames-service_gacha_db_replica
-    env_file: ./databases/gacha/replica/replica.env
-    volumes:
-    - ./databases/gacha/replica/init.sql:/docker-entrypoint-initdb.d/init.sql:ro
-    - ./databases/gacha/replica/ssl:/etc/mysql/ssl:ro
-    - service_gacha_db_replica_data:/var/lib/mysql
-    networks:
-    - public_gachaandgames_network
-    restart: always
+  # service_gacha_db_replica:
+  #   build: ./databases/gacha/replica/
+  #   container_name: unipi-gatchaandgames-service_gacha_db_replica
+  #   env_file: ./databases/gacha/replica/replica.env
+  #   volumes:
+  #   - ./databases/gacha/replica/init.sql:/docker-entrypoint-initdb.d/init.sql:ro
+  #   - ./databases/gacha/replica/ssl:/etc/mysql/ssl:ro
+  #   - service_gacha_db_replica_data:/var/lib/mysql
+  #   networks:
+  #   - public_gachaandgames_network
+  #   restart: always
   
   service_gacha_db_proxy:
     image: proxysql/proxysql:2.7.1
@@ -454,17 +453,17 @@ services:
     - public_gachaandgames_network
     restart: always
   
-  service_inventory_db_replica:
-    build: ./databases/inventory/replica/
-    container_name: unipi-gatchaandgames-service_inventory_db_replica
-    env_file: ./databases/inventory/replica/replica.env
-    volumes:
-    - ./databases/inventory/replica/init.sql:/docker-entrypoint-initdb.d/init.sql:ro
-    - ./databases/inventory/replica/ssl:/etc/mysql/ssl:ro
-    - service_inventory_db_replica_data:/var/lib/mysql
-    networks:
-    - public_gachaandgames_network
-    restart: always
+  # service_inventory_db_replica:
+  #   build: ./databases/inventory/replica/
+  #   container_name: unipi-gatchaandgames-service_inventory_db_replica
+  #   env_file: ./databases/inventory/replica/replica.env
+  #   volumes:
+  #   - ./databases/inventory/replica/init.sql:/docker-entrypoint-initdb.d/init.sql:ro
+  #   - ./databases/inventory/replica/ssl:/etc/mysql/ssl:ro
+  #   - service_inventory_db_replica_data:/var/lib/mysql
+  #   networks:
+  #   - public_gachaandgames_network
+  #   restart: always
   
   service_inventory_db_proxy:
     image: proxysql/proxysql:2.7.1
@@ -513,17 +512,17 @@ services:
     - public_gachaandgames_network
     restart: always
   
-  service_profile_db_replica:
-    build: ./databases/profile/replica/
-    container_name: unipi-gatchaandgames-service_profile_db_replica
-    env_file: ./databases/profile/replica/replica.env
-    volumes:
-    - ./databases/profile/replica/init.sql:/docker-entrypoint-initdb.d/init.sql:ro
-    - ./databases/profile/replica/ssl:/etc/mysql/ssl:ro
-    - service_profile_db_replica_data:/var/lib/mysql
-    networks:
-    - public_gachaandgames_network
-    restart: always
+  # service_profile_db_replica:
+  #   build: ./databases/profile/replica/
+  #   container_name: unipi-gatchaandgames-service_profile_db_replica
+  #   env_file: ./databases/profile/replica/replica.env
+  #   volumes:
+  #   - ./databases/profile/replica/init.sql:/docker-entrypoint-initdb.d/init.sql:ro
+  #   - ./databases/profile/replica/ssl:/etc/mysql/ssl:ro
+  #   - service_profile_db_replica_data:/var/lib/mysql
+  #   networks:
+  #   - public_gachaandgames_network
+  #   restart: always
   
   service_profile_db_proxy:
     image: proxysql/proxysql:2.7.1
@@ -572,17 +571,17 @@ services:
     - public_gachaandgames_network
     restart: always
   
-  service_pvp_db_replica:
-    build: ./databases/pvp/replica/
-    container_name: unipi-gatchaandgames-service_pvp_db_replica
-    env_file: ./databases/pvp/replica/replica.env
-    volumes:
-    - ./databases/pvp/replica/init.sql:/docker-entrypoint-initdb.d/init.sql:ro
-    - ./databases/pvp/replica/ssl:/etc/mysql/ssl:ro
-    - service_pvp_db_replica_data:/var/lib/mysql
-    networks:
-    - public_gachaandgames_network
-    restart: always
+  # service_pvp_db_replica:
+  #   build: ./databases/pvp/replica/
+  #   container_name: unipi-gatchaandgames-service_pvp_db_replica
+  #   env_file: ./databases/pvp/replica/replica.env
+  #   volumes:
+  #   - ./databases/pvp/replica/init.sql:/docker-entrypoint-initdb.d/init.sql:ro
+  #   - ./databases/pvp/replica/ssl:/etc/mysql/ssl:ro
+  #   - service_pvp_db_replica_data:/var/lib/mysql
+  #   networks:
+  #   - public_gachaandgames_network
+  #   restart: always
   
   service_pvp_db_proxy:
     image: proxysql/proxysql:2.7.1
@@ -595,35 +594,35 @@ services:
     restart: always
 
   ######### STACK ELK
-  logging_loki:
-    image: grafana/loki:latest
-    container_name: unipi-gatchaandgames-logging_loki
-    ports:
-      - "3100:3100"
-    volumes:
-      - loki_data:/loki
-    restart: always
-    networks:
-      - public_gachaandgames_network
-      - private_gachaandgames_network
+  # logging_loki:
+  #   image: grafana/loki:latest
+  #   container_name: unipi-gatchaandgames-logging_loki
+  #   ports:
+  #     - "3100:3100"
+  #   volumes:
+  #     - loki_data:/loki
+  #   restart: always
+  #   networks:
+  #     - public_gachaandgames_network
+  #     - private_gachaandgames_network
 
-  logging_grafana:
-    image: grafana/grafana-oss:10.1.2
-    container_name: unipi-gatchaandgames-logging_grafana
-    ports:
-      - "3000:3000"
-    volumes:
-      - grafana_data:/var/lib/grafana
-      - ./logs/grafana/provisioning/datasources:/etc/grafana/provisioning/datasources
-      - ./logs/grafana/provisioning/dashboards:/etc/grafana/provisioning/dashboards
-      - ./logs/grafana/dashboards:/var/lib/grafana/dashboards
-      - ./logs/grafana/grafana.ini:/etc/grafana/grafana.ini
-    env_file: ./logs/grafana/.env
-    depends_on:
-      - logging_loki
-    restart: always
-    networks:
-      - private_gachaandgames_network
+  # logging_grafana:
+  #   image: grafana/grafana-oss:10.1.2
+  #   container_name: unipi-gatchaandgames-logging_grafana
+  #   ports:
+  #     - "3000:3000"
+  #   volumes:
+  #     - grafana_data:/var/lib/grafana
+  #     - ./logs/grafana/provisioning/datasources:/etc/grafana/provisioning/datasources
+  #     - ./logs/grafana/provisioning/dashboards:/etc/grafana/provisioning/dashboards
+  #     - ./logs/grafana/dashboards:/var/lib/grafana/dashboards
+  #     - ./logs/grafana/grafana.ini:/etc/grafana/grafana.ini
+  #   env_file: ./logs/grafana/.env
+  #   depends_on:
+  #     - logging_loki
+  #   restart: always
+  #   networks:
+  #     - private_gachaandgames_network
 
 
 networks:
