--- a/databases/feedback/proxy/config copy.cnf
+++ b/databases/feedback/proxy/config copy.cnf
@@ -6,7 +6,8 @@ admin_variables=
 
 mysql_servers =
 (
-    { address="service_gacha_db_primary", port=3306, hostgroup=1, max_connections=300 }
+    { address="service_feedback_db_primary", port=3306, hostgroup=1, max_connections=300 },
+    { address="service_feedback_db_replica", port=3306, hostgroup=2, max_connections=300 }
 )
 
 mysql_users =
@@ -16,7 +17,8 @@ mysql_users =
 
 mysql_query_rules =
 (
-    { rule_id=1, active=1, match_pattern=".*", destination_hostgroup=1, apply=1 }
+    { rule_id=1, active=1, match_pattern="^SELECT .*", destination_hostgroup=2, apply=1 },
+    { rule_id=2, active=1, match_pattern=".*", destination_hostgroup=1, apply=1 }
 )
 
 mysql_variables=
