--- a/services/auth/.env
+++ b/services/auth/.env
@@ -1,4 +1,4 @@
-FLASK_SECRET_KEY=prova
+FLASK_SECRET_KEY=OraOraORA123StarPlatinumZAWARUDO!!MUDA2024WRYYYYYYGoldenExperienceRequiem
 FLASK_DEBUG=1
 FLASK_ENV=development
 
@@ -7,3 +7,5 @@ MYSQL_USER=gacha_test_user
 MYSQL_PASSWORD=gacha_test_password
 MYSQL_DB=gacha_test_db
 MYSQL_PORT=6033
+
+JWT_SECRET_KEY=YourNextLineIs2024-DIOvsJoJo-ROADROLLERDA!!!WRYYYY-TimeIsStopped-Requiem
