--- a/api_gateway_private/api_gateway.conf
+++ b/api_gateway_private/api_gateway.conf
@@ -11,9 +11,9 @@ http {
     proxy_headers_hash_max_size 1024;
     proxy_headers_hash_bucket_size 128;
 
-    # upstream logging_grafana {
-    #     server logging_grafana:3000;
-    # }
+    upstream logging_grafana {
+        server logging_grafana:3000;
+    }
     
     upstream service_admin {
         server service_admin:8080;
@@ -50,18 +50,18 @@ http {
             proxy_set_header X-Source-Gateway Gateway-Private;
         }
 
-        # location /logs/ {
-        #     proxy_set_header Host $host;
-        #     proxy_pass http://logging_grafana/;
-        # }
+        location /logs/ {
+            proxy_set_header Host $host;
+            proxy_pass http://logging_grafana/;
+        }
 
-        # location /logs/api/live/ {
-        #     proxy_http_version 1.1;
-        #     proxy_set_header Upgrade $http_upgrade;
-        #     proxy_set_header Connection $connection_upgrade;
-        #     proxy_set_header Host $host;
-        #     proxy_pass http://logging_grafana/;
-        # }
+        location /logs/api/live/ {
+            proxy_http_version 1.1;
+            proxy_set_header Upgrade $http_upgrade;
+            proxy_set_header Connection $connection_upgrade;
+            proxy_set_header Host $host;
+            proxy_pass http://logging_grafana/;
+        }
 
         location ^~ /favicon.ico {
             root /usr/share/nginx/html;
